<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="ru.mirea.zavarzin.mireaproject.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="ru.mirea.zavarzin.mireaproject.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="ru.mirea.zavarzin.mireaproject.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/nav_brouser"
        android:name="ru.mirea.zavarzin.mireaproject.BlankFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_blank" />
    <fragment
        android:id="@+id/calculateFragment"
        android:name="ru.mirea.zavarzin.mireaproject.CalculateFragment"
        android:label="fragment_calculate"
        tools:layout="@layout/fragment_calculate" />
    <fragment
        android:id="@+id/webViewFragment"
        android:name="ru.mirea.zavarzin.mireaproject.WebViewFragment"
        android:label="fragment_web_view"
        tools:layout="@layout/fragment_web_view" />
    <fragment
        android:id="@+id/musicFragment"
        android:name="ru.mirea.zavarzin.mireaproject.MusicFragment"
        android:label="fragment_music"
        tools:layout="@layout/fragment_music" />
    <fragment
        android:id="@+id/cameraFragment"
        android:name="ru.mirea.zavarzin.mireaproject.cameraFragment"
        android:label="fragment_camera"
        tools:layout="@layout/fragment_camera" />
    <fragment
        android:id="@+id/recordAudioFragment"
        android:name="ru.mirea.zavarzin.mireaproject.recordAudioFragment"
        android:label="fragment_record_audio"
        tools:layout="@layout/fragment_record_audio" />
    <fragment
        android:id="@+id/showSensorsFragment"
        android:name="ru.mirea.zavarzin.mireaproject.showSensorsFragment"
        android:label="fragment_show_sensors"
        tools:layout="@layout/fragment_show_sensors" />
    <fragment
        android:id="@+id/settingsFragment"
        android:name="ru.mirea.zavarzin.mireaproject.SettingsFragment"
        android:label="fragment_settings"
        tools:layout="@layout/fragment_settings" />
    <fragment
        android:id="@+id/historyFragment"
        android:name="ru.mirea.zavarzin.mireaproject.HistoryFragment"
        android:label="fragment_history"
        tools:layout="@layout/fragment_history" />
</navigation>
